# D-FINE-seg

./: .gitignore  README.md  pyproject.toml
d_fine/: config.py  trainer.py  utils.py  validator.py  visualization.py
d_fine/benchmarks/: __init__.py  batching.py  inference.py  suite.py
d_fine/config/: config.yaml
d_fine/config/dataset/: coco.yaml  yolo.yaml
d_fine/config/preset/: none.yaml
d_fine/core/: __init__.py  box_utils.py  configs.py  dfine.py  dfine_criterion.py  dist_utils.py  image_utils.py  logging.py  matcher.py  types.py  utils.py
d_fine/core/arch/: common.py  dfine_decoder.py  hgnetv2.py  hybrid_encoder.py  utils.py
d_fine/dataset/: __init__.py  augmentations.py  base.py  config.py  dataset.py  loader_utils.py  mask_types.py  mosaic.py  utils.py
d_fine/dataset/coco/: __init__.py  coco_dataset.py  coco_loader.py
d_fine/dataset/detection/: __init__.py  dataset.py  sample.py
d_fine/dataset/segmentation/: __init__.py  dataset.py  sample.py
d_fine/dataset/yolo/: __init__.py  yolo_dataset.py  yolo_loader.py
d_fine/dl/: bench.py  check_errors.py  export.py  infer.py  ov_int8.py  test_batching.py  train.py  train_entrypoint.py  view_samples.py
d_fine/etl/: clean_csv.py  coco2yolo.py  create_test_csv.py  png_mask_to_yolo.py  preprocess.py  remove_class.py  remove_dups.py  split.py  split_from_yolo.py  yolo2coco.py
d_fine/infer/: __init__.py  base.py  onnx_model.py  ov_model.py  test_inference.py  torch_model.py  trt_alr.py  trt_model.py  utils.py
d_fine/logging/: __init__.py  base.py  wandb.py
d_fine/scripts/: infer.py  train.py  train_entrypoint.py  view_samples.py
d_fine/tests/: test_box_dataset.py  test_dataset.py  test_datasets.py  test_import.py  test_inference.py  test_validation.py  utils.py
d_fine/tests/test_data/: cherry_subset.json
d_fine/validation/: __init__.py  confusion_matrix.py  mask_ap.py  matcher.py  metrics.py  plots.py  rle_utils.py  test_validation.py  utils.py  validator.py  visualization.py
d_fine/validation/test_data/: fruitlet_subset.json
demo/: demo.py
